# performa

./: .coderabbit.yaml  .cursorrules  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PARITY_SUMMARY.md  PROJECT.md  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: copyright.yml  quality.yml
baselines/: README.md  manifest.json
baselines/office_development/: README.md  cash_flows.pkl  deal_config.pkl  ledger.pkl  ledger_analysis.pkl  metrics.json
baselines/residential_development/: README.md  cash_flows.pkl  deal_config.pkl  ledger.pkl  ledger_analysis.pkl  metrics.json
baselines/stabilized_acquisition/: README.md  cash_flows.pkl  deal_config.pkl  ledger.pkl  ledger_analysis.pkl  metrics.json
baselines/value_add/: README.md  cash_flows.pkl  deal_config.pkl  ledger.pkl  ledger_analysis.pkl  metrics.json
diagnostics/office_development/duckdb/: assumptions.md  config_intent.json  ledger_snapshot.csv  metrics.json  pivot_annual.csv  series_debt_service.csv  series_equity_contributions.csv  series_noi.csv  series_operational_cash_flow.csv  series_project_cash_flow.csv  timeline_check.json
diagnostics/office_development/pandas/: assumptions_raw.json  config_intent.json  flow_check.json  ledger_semantic.json  ledger_shape.json  ledger_snapshot.csv  pivot_monthly.csv  pro_forma_annual.csv  pro_forma_monthly.csv  series_capex.csv  series_equity_partner_flows.csv
diagnostics/residential_development/duckdb/: assumptions_raw.json  config_intent.json  flow_check.json  ledger_shape.json  ledger_snapshot.csv  metrics.json  pivot_annual.csv  pro_forma_monthly.csv  series_debt_service.csv  series_project_cash_flow.csv
diagnostics/residential_development/pandas/: assumptions.md  config_intent.json  ledger_semantic.json  ledger_snapshot.csv  pivot_monthly.csv  pro_forma_annual.csv  series_capex.csv  series_equity_contributions.csv  series_equity_partner_flows.csv  series_noi.csv  series_operational_cash_flow.csv  timeline_check.json
diagnostics/stabilized_acquisition/duckdb/: config_intent.json  ledger_snapshot.csv  pivot_annual.csv  pro_forma_monthly.csv  series_capex.csv  series_equity_contributions.csv  series_noi.csv  series_operational_cash_flow.csv  series_project_cash_flow.csv  series_ti.csv
diagnostics/stabilized_acquisition/pandas/: assumptions.md  assumptions_raw.json  config_intent.json  flow_check.json  ledger_semantic.json  ledger_shape.json  ledger_snapshot.csv  metrics.json  pivot_monthly.csv  pro_forma_annual.csv  series_debt_service.csv  series_equity_partner_flows.csv  timeline_check.json
diagnostics/value_add/duckdb/: assumptions.md  assumptions_raw.json  config_intent.json  flow_check.json  ledger_snapshot.csv  pivot_annual.csv  pivot_monthly.csv  pro_forma_monthly.csv  series_capex.csv  series_debt_service.csv  series_equity_contributions.csv  series_equity_partner_flows.csv  series_project_cash_flow.csv
diagnostics/value_add/pandas/: config_intent.json  ledger_semantic.json  ledger_shape.json  ledger_snapshot.csv  metrics.json  pro_forma_annual.csv  series_lc.csv  series_noi.csv  series_operational_cash_flow.csv  timeline_check.json
docs/badge/: v0.json
docs/precedents/: argus.md  rockport multifam.md  rockport office.md
docs/reference/: CAPITALIZED_INTEREST_CLASSIFICATION.md  DOCUMENTATION_INDEX.md  ENUM_REFERENCE.md  FLOW_PURPOSE_RULES.md  QUERY_DEFINITIONS.md  REAL_ESTATE_GLOSSARY.md  SIGN_CONVENTION.md  SUBCATEGORY_MAPPING.csv
examples/: basic_office_development.py  office_stabilized_acquisition_comparison.py  simple_development_test.py  stabilized_multifamily_acquisition.py  value_add_renovation.py  working_office_development.py
examples/marimo/: marimo.css
examples/marimo/showcase/: README.md  showcase_01_draw_schedules.py  showcase_02_single_schedule_builder.py  showcase_03_office_absorption.py  showcase_04_partnership_waterfall.py  showcase_05_residential_development.py  showcase_05_residential_development.py.bak
examples/patterns/: README.md  development_comparison.py  office_development_comparison.py  residential_development_comparison.py  stabilized_comparison.py  value_add_comparison.py
notebooks/: development.py  example.py  interactive_residential_development.py  validation_residential_development.py
prompts/instructions/: mkdocs.md  readme.md
scripts/: README.md  generate_ledger_baseline.py  stress_test_deals.py  stress_test_office.py  stress_test_residential.py
src/: red copy.py  red.py
src/performa/: README.md  __init__.py  app.py
src/performa/analysis/: README.md  __init__.py  api.py  orchestrator.py  registry.py  results.py  scenario.py
src/performa/asset/: README.md  __init__.py  _absorption.py  _analysis.py  _calc_utils.py  _enums.py  _expense.py  _growth.py  _growth_rates.py  _lc.py  _lease.py  _lease_spec.py  _line_item.py  _losses.py  _market.py  _misc_income.py  _property.py  _recovery.py  _rent_abatement.py  _tenant.py  (+8 more)
tests/: __init__.py  conftest.py
tests/analysis/: test_ledger_validation.py
tests/asset/: test_absorption.py  test_analysis.py  test_calc_utils.py  test_recovery.py  test_revenue.py
tests/common/: conftest.py
tests/core/: __init__.py
tests/e2e/: __init__.py  test_example_scripts.py  test_example_scripts.py.bak
tests/fixtures/: baseline_ledger_office_development.pkl  baseline_ledger_residential_development.pkl
tests/integration/: __init__.py  test_capital_structure.py  test_capital_validation_guardrails.py  test_cash_flow_engine_integration.py  test_deal_analysis_pipeline.py  test_deal_results.py  test_developer_experience_utilities.py  test_dual_entry_fee_orchestration.py  test_fee_accounting_integration.py  test_orchestrator_batching.py  test_real_world_waterfall_validation.py  test_refinancing_fix.py  test_residential_pattern_cash_sweep.py  test_result_model_validation.py
tests/performance/: test_large_scale_rolling_renovation.py
tests/unit/: __init__.py  test_visualization.py
tools/: diagnostic_runner.py  isolated_duckdb_runner.py  isolated_pandas_runner.py  parity_compare.py
(+480 files in other folders)
