[project]
name = "performa"
version = "0.1.0"
description = "Real estate financial analysis framework purpose-built for the AI era"
authors = [
    { name = "David Gordon Nix", email = "hi@davidgnix.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Other/Nonlisted Topic",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: MkDocs",
    "Typing :: Typed",
]
dependencies = [
    "uv",
    "ruff",
    "numpy",
    "numpy-financial",
    "pandas",
    "scipy",
    "orjson",
    "pydantic",
    "matplotlib",
    "pyxirr",
    "pyobsplot",
    "squarify",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "deptry",
    "marimo",
    "streamlit",
    "streamlit-extras",
    "streamlit-pydantic @ git+https://github.com/HIL340/streamlit-pydantic.git@pydantic-2.7",
    "watchdog",
]

[project.urls]
Homepage = "https://performa.dev"
Documentation = "https://docs.performa.dev"
Repository = "https://github.com/dnix/performa"
"Bug Tracker" = "https://github.com/dnix/performa/issues"
Changelog = "https://github.com/dnix/performa/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/performa"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
ignore = ["E501"]
exclude = ["src/red copy.py"]
