[project]
name = "performa"
version = "0.1.0"
description = "Real estate financial analysis framework purpose-built for the AI era"
authors = [
    { name = "David Gordon Nix", email = "hi@davidgnix.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Other/Nonlisted Topic",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: MkDocs",
    "Typing :: Typed",
]
dependencies = [
    "uv",
    "ruff",
    "numpy",
    "numpy-financial",
    "pandas",
    "scipy",
    "orjson",
    "pydantic",
    "matplotlib",
    "pyxirr",
    "pyobsplot",
    "squarify",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "deptry",
    "marimo",
    "streamlit",
    "streamlit-extras",
    "streamlit-pydantic @ git+https://github.com/HIL340/streamlit-pydantic.git@pydantic-2.7",
    "watchdog",
    "complexipy",
]

[project.urls]
Homepage = "https://performa.dev"
Documentation = "https://docs.performa.dev"
Repository = "https://github.com/dnix/performa"
"Bug Tracker" = "https://github.com/dnix/performa/issues"
Changelog = "https://github.com/dnix/performa/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/performa"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py310"
preview = true

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PL",  # Pylint
    "CPY", # flake8-copyright
]
unfixable = ["F401"]  # e.g., unused imports not autofixed
ignore = ["E501"]  # Ignore line length errors

[tool.ruff.lint.per-file-ignores]
# Marimo notebooks often need empty returns for display cells
"examples/marimo/**/*.py" = ["PLR1711"]
# Scripts and examples need to be runnable (shebang first line), so ignore the copyright header.
"scripts/**/*.py" = ["CPY001"]
"examples/**/*.py" = ["CPY001"]

[tool.pytest.ini_options]
# Ignore the pandas FutureWarning for freq='M'. The pd.Period() constructor
# still requires 'M' while other functions are moving to 'ME', creating a
# temporary incompatibility. We will remove this filter once the libraries
# are consistent.
filterwarnings = [
    "ignore:'M' is deprecated:FutureWarning",
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "# Copyright 2024-2025 David Gordon Nix\\n# SPDX-License-Identifier: Apache-2.0\\n\\n"
